--- a/Task1.html
+++ b/Task1.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="col-sm-8">
-      <img src="C:\Users\chava\OneDrive\Pictures\Screenshots\Screenshot 2024-01-26 165721.png" id="image">
+      <img src="Screenshot 2024-01-26 165721.png" id="image">
     </div>
   </div>
   </div>
